# app

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.github/: dependabot.yml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 72b0c849201b_add_initial_schema.py  a1b2c3d4e5f6_add_transaction_tipo.py  a7b8c9d0e1f2_add_budgets.py  b2c3d4e5f6a7_add_user_role_and_refresh_tokens.py  c3d4e5f6a7b8_soft_delete_and_transfers.py  d4e5f6a7b8c9_add_user_mfa.py  e5f6a7b8c9d0_counterparties_and_medio_pago.py  f6a7b8c9d0e1_widen_transaction_tipo.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging_config.py  mfa.py  rate_limit.py  security.py  webhooks.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  counterparty.py  refresh_token.py  sub_category.py  transaction.py  user.py
backend/app/schemas/: __init__.py  (+11 more)
backend/docs/: API.md  BUSINESS.md  COMO_FUNCIONA.md  DIAGRAMAS.md  DIAGRAMS.md  FRONTEND.md  HOJA_RUTA.md  HOW_IT_WORKS.md  INDEX.md  INDICE.md  MODELOS.md  MODELS.md  NEGOCIO.md  REPOSITORIES.md  REPOSITORIOS.md  ROADMAP.md  SECURITY.md  SEGURIDAD.md  TESTING.md  openapi.snapshot.json
backend/scripts/: entrypoint.sh  export_openapi.py  generate_demo_100_users_sql.py  migrate.sh  promote_admin.py  seed.py  setup.sh  wait_for_db.py
backend/tests/: conftest.py  helpers.py
(+82 files in other folders)
